2003-08-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_texinfo_helper): Use the user definition
	of TEXINFO_TEX before checking for cygnus or AC_CONFIG_AUX_DIR.
	* tests/txinfo22.test: New file.
	* tests/Makefile.am (TESTS): Add txinfo22.test.
	Report from Tom Tromey.

2003-08-03  Raja R Harinath  <harinath@acm.org>

	* lib/Automake/Variable.pm (@EXPORT): Remove
	traverse_variable_recursively and
	require_variables_for_variable.
	(require_variables_for_variable, traverse_variable_recursively)
	(_traverse_variable_recursively_worker): Convert to
	Automake::Variable methods, remove support for being
	invoked with variable names, and rename to ...
	(requires_variables, traverse_recursively)
	(_do_recursive_traversal): ... these.
	(_value_as_list_recursive_worker, transform_variable_recursively):
	Update to reflect changes.
	* automake.in (handle_LIBOBJS, handle_ALLOCA)
	(handle_libraries, handle_ltlibraries, am_primary_prefixes):
	Likewise.
	(define_objects_from_sources): Fix typo in comment.

2003-08-02  Raja R Harinath  <harinath@acm.org>

	* automake.in (handle_source_transform): Replace 'grep' with 'map'.
	(register_language): Replace 'grep' with 'foreach' modifier.

2003-08-01  Raja R Harinath  <harinath@acm.org>

	* lib/Automake/Variables.pm (variables): Return a list of
	Automake::Variable instances, not a list of strings.
	(dump): Remove support for being invoked with a string.
	(variables_dump): Adapt to these changes.
	* automake.in (check_typos): Likewise.
	(am_primary_prefixes): Likewise.

2003-07-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)

	* lib/depcomp (aix): Support AIX Compiler version 6.

2003-07-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (A Shared Library): Rewrite and split into
	subsections.  Valuable comments from Norman Gray, Harlan Stenn,
	Tim Van Holder, and Guido Draheim.
	* tests/ltcond.test, tests/ltcond2.test, tests/ltconv.test: New files.
	* tests/Makefile.am (TESTS): Add them.
