@@ -1,5 +1,7 @@
 2003-08-05  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* tests/ltconv.test: s/rm/rm -f/ to placate maintainer-check.
+
 	* automake.in (handle_texinfo_helper): Use the user definition
 	of TEXINFO_TEX before checking for cygnus or AC_CONFIG_AUX_DIR.
 	* tests/txinfo22.test: New file.
